# TP_edu

./: README.md  Readme.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task5/cmake-with-flask/: Dockerfile
task6/.github/workflows/: main.yml
task6/task-ci/: CMakeLists.txt
